# assets_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: assets.cmake
examples/: CMakeLists.txt  main.c
examples/assets/: hello-world.slang  texture_01.png (2)
examples/hotreload_example/: CMakeLists.txt
examples/hotreload_example/src/: main.c
examples/simple_example/: CMakeLists.txt
examples/simple_example/src/: main.c
include/: assets.h  assets.h.bak  assets_base.h
src/: assets.c  third_party_impl.c
